--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -23,7 +23,13 @@ spring:
           filters:
             - RewritePath=/api/user/(?<segment>.*), /user/${segment}
 
-
+eureka:
+  client:
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
 
 logging:
   level:
