--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -24,6 +24,14 @@ spring:
             - RewritePath=/api/user/(?<segment>.*), /user/${segment}
 
 
+eureka:
+  client:
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
+
 logging:
   level:
     org.springframework.cloud.gateway: DEBUG
