--- a/application.yml
+++ b/application.yml
@@ -1,9 +1,7 @@
 
-
-logging:
-  level:
-    root: INFO
-    org.springframework.web: DEBUG
-    org.atlas: DEBUG
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n"
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
