--- a/application.yml
+++ b/application.yml
@@ -4,3 +4,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     prefer-ip-address: true
+management:
+  tracing:
+    sampling:
+      probability=1:
