--- a/email-service.yml
+++ b/email-service.yml
@@ -1,15 +1,18 @@
-mail:
-  host: localhost
-  port: 1025
-  username: azzedine
-  password: Bakaazzedine456
-  properties:
-    mail:
-      smtp:
-        trust: "*"
-      auth: true
-      starttls:
-        enabled: true
-      connectiontimeout: 5000
-      timeout: 3000
-      writetimeout: 5000
+spring:
+  mail:
+    host: localhost
+    port: 1025
+    username: azzedine
+    password: Bakaazzedine456
+    properties:
+      mail:
+        smtp:
+          trust: "*"
+        auth: true
+        starttls:
+          enabled: true
+        connectiontimeout: 5000
+        timeout: 3000
+        writetimeout: 5000
+
+
