--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,8 @@
 eureka:
   client:
     service-url:
+      fetch-registry: true
+      register-with-eureka: true
       defaultZone: http://localhost:8761/eureka/
   instance:
     prefer-ip-address: true
