--- a/user-service.yml
+++ b/user-service.yml
@@ -1,4 +1,16 @@
+server:
+  port: 8081
+
 spring:
+  application:
+    name: user-service
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: admin
+    password: Bakaazzedine456
+    template:
+      exchange: data-exchange
   flyway:
     baseline-on-migrate: true
     enabled: true
