--- a/auth-service.yml
+++ b/auth-service.yml
@@ -1,4 +1,16 @@
+server:
+  port: 8082
+
 spring:
+  application:
+    name: auth-service
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: admin
+    password: Bakaazzedine456
+    template:
+      exchange: data-exchange
   flyway:
     baseline-on-migrate: true
     enabled: true
@@ -11,3 +23,7 @@ spring:
     url: r2dbc:postgresql://localhost:5435/auth
     username: postgres
     password: Bakaazzedine456
+
+jwt:
+  secret-key: VGhpc1NIaXRJc1RoZVNjcmV0S2V5Rm9yV2hhdGV2ZXI=
+  expiration-time: 864_000_000
