--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -5,6 +5,10 @@ spring:
   application:
     name: api-gateway
   cloud:
+    config:
+      uri: http://localhost:8888
+  config:
+    import: optional:configserver:http://localhost:8888
     gateway:
       discovery:
         locator:
