--- a/document-service.yml
+++ b/document-service.yml
@@ -2,6 +2,11 @@ server:
   port: 8084
 
 spring:
+  cloud:
+    config:
+      uri: http://localhost:8888
+  config:
+    import: optional:configserver:http://localhost:8888
   application:
     name: document-service
   rabbitmq:
