--- a/organization-service.yml
+++ b/organization-service.yml
@@ -2,6 +2,11 @@ server:
   port: 8083
 
 spring:
+  cloud:
+    config:
+      uri: http://localhost:8888
+  config:
+    import: optional:configserver:http://localhost:8888
   application:
     name: organization-service
   rabbitmq:
