--- a/registry-service.yml
+++ b/registry-service.yml
@@ -2,6 +2,11 @@ server:
   port: 8761
 
 spring:
+  cloud:
+    config:
+      uri: http://localhost:8888
+  config:
+    import: optional:configserver:http://localhost:8888
   application:
     name: registry-service
 
