--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -18,28 +18,110 @@ spring:
         - id: auth-service
           uri: lb://AUTH-SERVICE
           predicates:
-            - Path=/api/auth/**
+            - Path=/auth/**
           filters:
-            - AddResponseHeader=X-Response-Time, ${now:yyyy-MM-dd'T'HH:mm:ss.SSS'Z'}
-            - RewritePath=/api/auth/(?<segment>.*), /auth/${segment}
+            - name: CircuitBreaker
+              args:
+                name: authService
+                fallbackUri: forward:/fallback/auth
         - id: user-service
           uri: lb://USER-SERVICE
           predicates:
-            - Path=/api/user/**
+            - Path=/user/**
           filters:
-            - RewritePath=/api/user/(?<segment>.*), /user/${segment}
+            - name: CircuitBreaker
+              args:
+                name: userService
+                fallbackUri: forward:/fallback/user
         - id: organization-service
           uri: lb://ORGANIZATION-SERVICE
           predicates:
-            - Path=/api/org/**
+            - Path=/org/**
           filters:
-            - RewritePath=/api/org/(?<segment>.*), /org/${segment}
+            - name: CircuitBreaker
+              args:
+                name: organizationService
+                fallbackUri: forward:/fallback/organization
         - id: document-service
           uri: lb://DOCUMENT-SERVICE
           predicates:
-            - Path=/api/doc/**
+            - Path=/document/**
           filters:
-            - RewritePath=/api/doc/(?<segment>.*), /doc/${segment}
+            - name: CircuitBreaker
+              args:
+                name: documentService
+                fallbackUri: forward:/fallback/document
+        - id: email-service
+          uri: lb://EMAIL-SERVICE
+          predicates:
+            - Path=/email/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: emailService
+                fallbackUri: forward:/fallback/email
+
+
+# Resilience4j Circuit Breaker Configuration
+resilience4j:
+  circuitbreaker:
+    instances:
+      authService:
+        sliding-window-size: 10
+        minimum-number-of-calls: 5
+        permitted-number-of-calls-in-half-open-state: 3
+        automatic-transition-from-open-to-half-open-enabled: true
+        wait-duration-in-open-state: 5s
+        failure-rate-threshold: 50
+        event-consumer-buffer-size: 10
+      userService:
+        sliding-window-size: 10
+        minimum-number-of-calls: 5
+        permitted-number-of-calls-in-half-open-state: 3
+        automatic-transition-from-open-to-half-open-enabled: true
+        wait-duration-in-open-state: 5s
+        failure-rate-threshold: 50
+        event-consumer-buffer-size: 10
+      organizationService:
+        sliding-window-size: 10
+        minimum-number-of-calls: 5
+        permitted-number-of-calls-in-half-open-state: 3
+        automatic-transition-from-open-to-half-open-enabled: true
+        wait-duration-in-open-state: 5s
+        failure-rate-threshold: 50
+        event-consumer-buffer-size: 10
+      documentService:
+        sliding-window-size: 10
+        minimum-number-of-calls: 5
+        permitted-number-of-calls-in-half-open-state: 3
+        automatic-transition-from-open-to-half-open-enabled: true
+        wait-duration-in-open-state: 5s
+        failure-rate-threshold: 50
+        event-consumer-buffer-size: 10
+      emailService:
+        sliding-window-size: 10
+        minimum-number-of-calls: 5
+        permitted-number-of-calls-in-half-open-state: 3
+        automatic-transition-from-open-to-half-open-enabled: true
+        wait-duration-in-open-state: 5s
+        failure-rate-threshold: 50
+        event-consumer-buffer-size: 10
+
+# Spring Boot 3.x Zipkin configuration
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
 
 
 
