--- a/registry-service.yml
+++ b/registry-service.yml
@@ -2,15 +2,27 @@ server:
   port: 8761
 
 spring:
-  cloud:
-    config:
-      uri: http://localhost:8888
-  config:
-    import: optional:configserver:http://localhost:8888
   application:
     name: registry-service
+
+# Spring Boot 3.x Zipkin configuration
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
 
 eureka:
   client:
     fetch-registry: false
     register-with-eureka: false
+
