--- a/auth-service.yml
+++ b/auth-service.yml
@@ -1,13 +1,6 @@
 server:
   port: 8081
 spring:
-  application:
-    name: auth-service
-  cloud:
-    config:
-      uri: http://localhost:8888
-  config:
-    import: optional:configserver:http://localhost:8888
   r2dbc:
     url: r2dbc:postgresql://localhost:5435/auth
     username: postgres
@@ -26,64 +19,9 @@ spring:
       default-receive-queue: auth-queue
       exchange: data-exchange
 
-# Resilience4j Circuit Breaker Configuration
-resilience4j:
-  circuitbreaker:
-    instances:
-      userService:
-        sliding-window-size: 10
-        minimum-number-of-calls: 5
-        permitted-number-of-calls-in-half-open-state: 3
-        automatic-transition-from-open-to-half-open-enabled: true
-        wait-duration-in-open-state: 5s
-        failure-rate-threshold: 50
-        event-consumer-buffer-size: 10
-      organizationService:
-        sliding-window-size: 10
-        minimum-number-of-calls: 5
-        permitted-number-of-calls-in-half-open-state: 3
-        automatic-transition-from-open-to-half-open-enabled: true
-        wait-duration-in-open-state: 5s
-        failure-rate-threshold: 50
-        event-consumer-buffer-size: 10
-  retry:
-    instances:
-      userService:
-        max-attempts: 3
-        wait-duration: 1s
-        retry-exceptions:
-          - org.springframework.web.reactive.function.client.WebClientResponseException
-          - java.net.ConnectException
-      organizationService:
-        max-attempts: 3
-        wait-duration: 1s
-        retry-exceptions:
-          - org.springframework.web.reactive.function.client.WebClientResponseException
-          - java.net.ConnectException
-  timelimiter:
-    instances:
-      userService:
-        timeout-duration: 3s
-        cancel-running-future: true
-      organizationService:
-        timeout-duration: 3s
-        cancel-running-future: true
-
-# Spring Boot 3.x Zipkin configuration
-management:
-  tracing:
-    sampling:
-      probability: 1.0
-  zipkin:
-    tracing:
-      endpoint: http://localhost:9411/api/v2/spans
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-  endpoint:
-    health:
-      show-details: always
+# JWT Configuration
+jwt:
+  expiration-time: 86400000 # 24 hours in milliseconds
 
 
 
