--- a/application.yml
+++ b/application.yml
@@ -125,35 +125,35 @@ resilience4j:
         timeout-duration: 3s
         cancel-running-future: true
 
-# Comprehensive logging configuration
-logging:
-  level:
-    root: INFO
-    org.springframework: INFO
-    org.springframework.web: INFO
-    org.springframework.security: INFO
-    org.springframework.cloud: INFO
-    org.atlas: DEBUG
-    org.atlas.services: DEBUG
-    org.atlas.controllers: DEBUG
-    org.atlas.repositories: DEBUG
-    org.atlas.security: DEBUG
-    reactor.netty: INFO
-    reactor.core: INFO
-    org.hibernate: INFO
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] [trace=%X{traceId:-},span=%X{spanId:-}] [%X{correlationId}] %-5level %logger{36} - %msg%n"
-    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] [trace=%X{traceId:-},span=%X{spanId:-}] [%X{correlationId}] %-5level %logger{36} - %msg%n"
-  file:
-    name: logs/application.log
-    max-size: 10MB
-    max-history: 10
-    total-size-cap: 100MB
-  logback:
-    rollingpolicy:
-      max-file-size: 10MB
-      max-history: 7
-      total-size-cap: 100MB
-      file-name-pattern: logs/archived/application-%d{yyyy-MM-dd}.%i.log.gz
+## Comprehensive logging configuration
+#logging:
+#  level:
+#    root: INFO
+#    org.springframework: INFO
+#    org.springframework.web: INFO
+#    org.springframework.security: INFO
+#    org.springframework.cloud: INFO
+#    org.atlas: DEBUG
+#    org.atlas.services: DEBUG
+#    org.atlas.controllers: DEBUG
+#    org.atlas.repositories: DEBUG
+#    org.atlas.security: DEBUG
+#    reactor.netty: INFO
+#    reactor.core: INFO
+#    org.hibernate: INFO
+#    org.hibernate.SQL: DEBUG
+#    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+#  pattern:
+#    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] [trace=%X{traceId:-},span=%X{spanId:-}] [%X{correlationId}] %-5level %logger{36} - %msg%n"
+#    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] [trace=%X{traceId:-},span=%X{spanId:-}] [%X{correlationId}] %-5level %logger{36} - %msg%n"
+#  file:
+#    name: logs/application.log
+#    max-size: 10MB
+#    max-history: 10
+#    total-size-cap: 100MB
+#  logback:
+#    rollingpolicy:
+#      max-file-size: 10MB
+#      max-history: 7
+#      total-size-cap: 100MB
+#      file-name-pattern: logs/archived/application-%d{yyyy-MM-dd}.%i.log.gz
