--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,7 @@
+
+spring:
+  main:
+    web-application-type: reactive
 eureka:
   client:
     service-url:
@@ -11,6 +15,7 @@ management:
   tracing:
     sampling:
       probability: 1.0
+    enabled: true
   zipkin:
     tracing:
       endpoint: http://localhost:9411/api/v2/spans
