--- a/application.yml
+++ b/application.yml
@@ -15,12 +15,30 @@ management:
   tracing:
     sampling:
       probability: 1.0
-    enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,loggers
+  health:
+    defaults:
+      enabled: true
+  metrics:
+    export:
+      prometheus:
+        enabled: true
   zipkin:
     tracing:
       endpoint: http://localhost:9411/api/v2/spans
+  endpoint:
+    health:
+      show-details: always
 
-
+spring:
+  zipkin:
+    base-url: http://zipkin:9411
+  sleuth:
+    sampler:
+      probability: 1.0
 
 # Resilience4j Circuit Breaker Configuration (shared across services)
 resilience4j:
