moved gateway config to a dedicated class

--- a/document-service.yml
+++ b/document-service.yml
@@ -8,7 +8,7 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
-    username: mongo
+    username: admin
     password: Bakaazzedine456
     template:
       default-receive-queue: document-queue
