refactor MongoDB configurationin document-service.yml

--- a/document-service.yml
+++ b/document-service.yml
@@ -6,7 +6,7 @@ spring:
     mongodb:
       host: localhost
       port: 27017
-      database: playbook_document
+      database: documents
       username: mongo
       password: Bakaazzedine456
       authentication-database: admin
